# smart_coffee_machine

./: README.md
embedded_software/saeco_intelia_hack/: saeco_intelia.c  (+1 more)
gateway_software/examples/CafeSourire/: .CMakeLists.txt.swp  .client.cpp.swp  .smile_rasp.cpp.swp  CMakeLists.txt  client.cpp  client.h  coffee_machine_ap.service  configure_demo.sh  detect_smile.py  detect_smile.service  detect_smile_demo_a4h.service  detect_smile_demo_outside.service  smile_detect.cpp  smile_detection.rules  smile_rasp.cpp
gateway_software/examples/CafeSourire/access_point/: coffee_machine_dhcpd.conf  coffee_machine_hostapd.conf  start_coffee_machine_ap.sh
gateway_software/examples/CafeSourire/data/: CTestTestfile.cmake  Makefile  a  b  cmake_install.cmake
gateway_software/examples/CafeSourire/detect_smile_python/: .gitignore  fnsmile.py
gateway_software/examples/CafeSourire/openhab_config/helper_scripts/: play_sound.sh  say.sh
gateway_software/examples/CafeSourire/openhab_config/items/: face_detector.items
gateway_software/examples/CafeSourire/openhab_config/persistence/: influxdb.persist
gateway_software/examples/CafeSourire/openhab_config_files/: coffee_machine.items  coffee_machine.rules  custom_coffee.map  face_detector.items  influxdb.persist  interphone.rules  slack.items  slack.rules  smile_detection.rules  user_lang.map
gateway_software/examples/CafeSourire/openhab_scripts/: mpd_play_pause.sh  play_coucou.sh  play_sound.sh  say.sh
gateway_software/examples/CafeSourire/video_stream/: detect_smile_graphical.conf  no_wm_xinitrc  startx@.service
(+37 files in other folders)
